--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -19,7 +19,7 @@
 
             <div class="col header-content">
                 <div class="extra-button">
-                    <a class="built-by" mat-raised-button  color="warn" href="https://codenarrator.now.sh/" target="_blank">
+                    <a class="built-by" mat-raised-button  color="warn">
                        By Adil Hameed
                     </a>
                     <!--<button class="more" mat-icon-button [matMenuTriggerFor]="menu">
