--- a/src/app/shared/components/virtual-scroll/virtual-scroll.component.scss
+++ b/src/app/shared/components/virtual-scroll/virtual-scroll.component.scss
@@ -7,7 +7,7 @@
 	overflow-x: hidden;
 	@media (max-width: 36em) {
 		width: 100%;
-		height: inherit;
+		height: initial;
 		position: relative;
 		contain: none;
 		overflow: visible;
