--- a/src/app/shared/components/virtual-scroll/virtual-scroll.component.scss
+++ b/src/app/shared/components/virtual-scroll/virtual-scroll.component.scss
@@ -7,10 +7,11 @@
 	overflow-x: hidden;
 	@media (max-width: 36em) {
 		width: 100%;
-		height: auto;
-		position: relative;
-		contain: none;
-		overflow: visible;
+		height: 100%;
+		position: unset;
+		contain: initial;
+		overflow: initial;
+		display: block;
 	}
 }
 
