--- a/src/app/shared/components/virtual-scroll/virtual-scroll.component.scss
+++ b/src/app/shared/components/virtual-scroll/virtual-scroll.component.scss
@@ -7,11 +7,9 @@
 	overflow-x: hidden;
 	@media (max-width: 36em) {
 		width: 100%;
-		height: 100%;
-		position: unset;
-		contain: initial;
-		overflow: initial;
-		display: block;
+		position: relative;
+		contain: none;
+		overflow: visible;
 	}
 }
 
