--- a/src/app/shared/components/virtual-scroll/virtual-scroll.component.scss
+++ b/src/app/shared/components/virtual-scroll/virtual-scroll.component.scss
@@ -7,7 +7,8 @@
 	overflow-x: hidden;
 	@media (max-width: 36em) {
 		width: 100%;
-		position: relative;
+		height: 100%;
+		position: static;
 		contain: none;
 		overflow: visible;
 	}
