--- a/src/app/shared/components/virtual-scroll/virtual-scroll.component.scss
+++ b/src/app/shared/components/virtual-scroll/virtual-scroll.component.scss
@@ -8,9 +8,15 @@
 	@media (max-width: 36em) {
 		width: 100%;
 		height: 100%;
+		display: contents;
 		position: static;
 		contain: none;
 		overflow: visible;
+		margin-bottom: 1em;
+
+		.cdk-virtual-scroll-content-wrapper {
+			position: inherit;
+		}
 	}
 }
 
