--- a/src/app/shared/components/virtual-scroll/virtual-scroll.component.scss
+++ b/src/app/shared/components/virtual-scroll/virtual-scroll.component.scss
@@ -8,11 +8,11 @@
 	@media (max-width: 36em) {
 		width: 100%;
 		height: 100%;
-		display: contents;
+		display: table-cell;
 		position: static;
 		contain: none;
 		overflow: visible;
-		margin-bottom: 1em;
+		padding-bottom: 2em;
 
 		.cdk-virtual-scroll-content-wrapper {
 			position: inherit;
